--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <style>
-    body, input { font-family: "roboto mono"; }
-  </style>
+  <title>js-uuidgen</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <h1>uuidgen</h1>
+  <h1>js-uuidgen</h1>
   <p>Generates <a href="https://tools.ietf.org/html/rfc4122">RFC-4122</a>
   random UUIDs.</p>
   <input id="uuid" readonly="true" size=36 type="text">
