css/main.css: index.html: CSS tweaks.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   random UUIDs.</p>
   <input id="uuid" readonly="true" size=36 type="text">
   <script src="uuidgen.js"></script>
-  <button onclick="generate_uuid('uuid')">Generate</button>
+  <p><button onclick="generate_uuid('uuid')">Generate</button>
   <button onclick="copy_to_clipboard('uuid')">Copy</button>
 </body>
 </html>
